# my-ai-companion

./: .env.example  .gitignore  INSTRUCTION.md  LICENSE  README.md  SERVER_SPEC.md  app.py  cli_client.py  client.py  config.py  connection_manager.py  llm_utils.py  mac_companion_poc.py  main.py  pyproject.toml  requirements.txt  utils.py  verify_ws.py
app/: config.py  server.py  setup.py
app/apps/: AI_INSTRUCTIONS.md  base.py  excel.py  monitor.py  numbers.py  registry.py
app/input/: AI_INSTRUCTIONS.md  audio.py  text.py
app/llm/: AI_INSTRUCTIONS.md  base.py  gemini.py
app/prompts/: AI_INSTRUCTIONS.md  app_instructions.py  personas.py
app/tts/: AI_INSTRUCTIONS.md  base.py  gemini.py  macos.py  windows.py
companion/: electron-main.js  index.html  main.js  package-lock.json  package.json  preload.js  style.css
companion/modules/: animations.js  audio.js  cape.js  character.js  face.js  scene.js  speechBubble.js  stateHandler.js  textInput.js  ui.js  waveform.js  websocket.js
companion/workshop/: 00-architecture.md  01-websocket-connection.md  02-push-to-talk.md  03-waveform-animation.md  04-audio-playback.md  05-text-input.md  06-backend-state.md  README.md
frontend/: codex.html  composer.html  deepseek.html  gemini.html  index.html  main.js  opus.html  sonnet.html  style.css
frontend2/: index.html  main.js  style.css
workshop/: AVATAR_INSTRUCTIONS.md  AVATAR_WORKSHOP_PROMPT.md  README.md
