[project]
name = "ai-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "google-generativeai>=0.8.5",
    "google-genai>=0.2.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.12.0",
    "psutil>=5.9.0 ; sys_platform == 'win32'",
    "pywin32>=306 ; sys_platform == 'win32'",
    "pyobjc-framework-cocoa>=12.1 ; sys_platform == 'darwin'",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
